# fluid-dynamics

./: .gitignore  CMakeLists.txt
src/: config.hpp  consts.hpp  main.cpp  main.cu  simulation.hpp
